# uncommon-funds

./: .gitignore  README.md  cardif_vita_valorplus.csv  main.py  pyproject.toml  teleborsa_fetcher.py
.github/: fetch-data.yaml
.github/workflows/: fetch-data.yaml
quotations/: ES0000012F76.csv  ES0000012F76.json  IT0005517195.csv  IT0005517195.json  LU2141869003.csv  LU2141869003.json  cardif_vita_valorplus.csv  cardif_vita_valorplus.json
